--- a/Suits/Power_Suit.html
+++ b/Suits/Power_Suit.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous"></script>
         <script>
           $(function(){
-            $('#header').load('header.html');
+            $('#header').load('../header.html');
           });
         </script>
 </head>
@@ -20,6 +20,9 @@
   <div class="front">
   <h1>Power Suit</h1>
   <hr>
+
+  <!-- Description -->
+
   <div class="heading">
     <h3>DESCRIPTION</h3>
     <div class="paragraph">
@@ -29,6 +32,9 @@
     <h6>Attained from start</h6></div>
   </div>
   </div>
+
+  <!-- Display -->
+
   <div align='right'>
   <div class="display" align='center'>
     <h2>Power Suit</h2>
