--- a/header.html
+++ b/header.html
@@ -3,38 +3,38 @@
 <div class="navbar">
 <a href="index.html">Home</a>
 <div class="subnav">
-<button class="subnavbtn" onclick="window.location.href='Suits.html';">Suits</button>
+<button class="subnavbtn" onclick="window.location.href='https://italiancucumber.github.io/super-metroid-guide/Suits.html';">Suits</button>
 <div class="subnav-content">
-  <a href="Suits/Power_Suit.html">Power</a>
-  <a href="Suits/Varia_Suit.html">Varia</a>
-  <a href="Suits/Gravity_Suit.html">Gravity</a>
+  <a href="https://italiancucumber.github.io/super-metroid-guide/Suits/Power_Suit.html">Power</a>
+  <a href="https://italiancucumber.github.io/super-metroid-guide/Suits/Varia_Suit.html">Varia</a>
+  <a href="https://italiancucumber.github.io/super-metroid-guide/Suits/Gravity_Suit.html">Gravity</a>
 </div>
 </div>
     <div class="subnav">
-<button class="subnavbtn" onclick="window.location.href='Upgrades.html';">Upgrades</button>
+<button class="subnavbtn" onclick="window.location.href='https://italiancucumber.github.io/super-metroid-guide/Upgrades.html';">Upgrades</button>
 <div class="subnav-content">
-  <a href="Upgrades/Missiles.html">Missiles</a>
-  <a href="Upgrades/Bombs.html">Bombs</a>
-  <a href="Upgrades/Beams.html">Beams</a>
-  <a href="Upgrades/Morphing_Ball.html">Morphing Ball</a>
-  <a href="Upgrades/Hi-Jump_Boots.html">Hi-Jump Boots</a>
-  <a href="Upgrades/Speed_Booster.html">Speed Booster</a>
-  <a href="Upgrades/Xray_Scope.html">X-Ray Scope</a>
-  <a href="Upgrades/Space_Jump.html">Space Jump</a>
-  <a href="Upgrades/Spring_Ball.html">Spring Ball</a>
-  <a href="Upgrades/Screw_Attack.html">Screw Attack</a>
+  <a href="https://italiancucumber.github.io/super-metroid-guide/Upgrades/Missiles.html">Missiles</a>
+  <a href="https://italiancucumber.github.io/super-metroid-guide/Upgrades/Bombs.html">Bombs</a>
+  <a href="https://italiancucumber.github.io/super-metroid-guide/Upgrades/Beams.html">Beams</a>
+  <a href="https://italiancucumber.github.io/super-metroid-guide/Upgrades/Morphing_Ball.html">Morphing Ball</a>
+  <a href="https://italiancucumber.github.io/super-metroid-guide/Upgrades/Hi-Jump_Boots.html">Hi-Jump Boots</a>
+  <a href="https://italiancucumber.github.io/super-metroid-guide/Upgrades/Speed_Booster.html">Speed Booster</a>
+  <a href="https://italiancucumber.github.io/super-metroid-guide/Upgrades/Xray_Scope.html">X-Ray Scope</a>
+  <a href="https://italiancucumber.github.io/super-metroid-guide/Upgrades/Space_Jump.html">Space Jump</a>
+  <a href="https://italiancucumber.github.io/super-metroid-guide/Upgrades/Spring_Ball.html">Spring Ball</a>
+  <a href="https://italiancucumber.github.io/super-metroid-guide/Upgrades/Screw_Attack.html">Screw Attack</a>
 </div>
 </div>
     <div class="subnav">
-<button class="subnavbtn" onclick="window.location.href='Bosses.html';">Bosses</button>
+<button class="subnavbtn" onclick="window.location.href='https://italiancucumber.github.io/super-metroid-guide/Bosses.html';">Bosses</button>
 <div class="subnav-content">
-  <a href="Bosses/Kraid.html">Kraid</a>
-  <a href="Bosses/Crocomire.html">Crocomire</a>
-  <a href="Bosses/Phantoon.html">Phantoon</a>
-  <a href="Bosses/Draygon.html">Draygon</a>
-  <a href="Bosses/Ridley.html">Ridley</a>
-  <a href="Bosses/Mother_Brain.html">Mother Brain</a>
+  <a href="https://italiancucumber.github.io/super-metroid-guide/Bosses/Kraid.html">Kraid</a>
+  <a href="https://italiancucumber.github.io/super-metroid-guide/Bosses/Crocomire.html">Crocomire</a>
+  <a href="https://italiancucumber.github.io/super-metroid-guide/Bosses/Phantoon.html">Phantoon</a>
+  <a href="https://italiancucumber.github.io/super-metroid-guide/Bosses/Draygon.html">Draygon</a>
+  <a href="https://italiancucumber.github.io/super-metroid-guide/Bosses/Ridley.html">Ridley</a>
+  <a href="https://italiancucumber.github.io/super-metroid-guide/Bosses/Mother_Brain.html">Mother Brain</a>
 </div>
 </div>
-    <a href='Zebes/Zebes.html'>Zebes</a>
+    <a href='https://italiancucumber.github.io/super-metroid-guide/Zebes/Zebes.html'>Zebes</a>
 </div>
