--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <link rel='stylesheet' href='style.css'>
 
 <div class="navbar">
-<a href="index.html">Home</a>
+<a href="https://italiancucumber.github.io/super-metroid-guide/index.html">Home</a>
 <div class="subnav">
 <button class="subnavbtn" onclick="window.location.href='https://italiancucumber.github.io/super-metroid-guide/Suits.html';">Suits</button>
 <div class="subnav-content">
