--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         </div>
         <div class="hparagraph">
           <h3>The Metroid franchise is a Nintendo title that has had games ranging<br>from 1986 ongoing to the present day. The game that is in focus here is the 1994 SNES classic,<br>often regarded as the best in the series, Super Metroid (in-game referred to as Metroid 3).<br> While the gameplay is similar to the previous ones, the ambience such<br>as graphics and audio are renowned even by today's standards. Here, I invite you<br>to take a trip through the things that make the game what it is.</h3>
+          <br><br>
+          <h6>All content on this site belongs to Nintendo, Protected under the <a href="https://creativecommons.org/licenses/by-sa/3.0/legalcode" target="_blank">Creative Commons Attribution-Share Alike License 3.0 (Unported) (CC-BY-SA)</a></h6>
         </div>
 </body>
 </html>
