Add unordered list

--- a/Zebes/Zebes.html
+++ b/Zebes/Zebes.html
@@ -29,7 +29,7 @@
     <h6><b>Zebes</b> is the planet that the game takes place on. This planet has been taken  over by space pirates and their leader, Ridley.<br>This planet is filled with harsh environments that Samus must traverse to defeat the space pirates and turn it back to the way<br>it was before. The regions on Zebes range from a boiling, lava-filled cave to a sunken ship with mysterious ancient technology.</h6></div>
     <h3>REGIONS</h3>
     <div class="paragraph">
-    <h6>Brinstar<br>Crateria<br>Maridia<br>Wrecked Ship<br>Norfair<br>Tourian</h6></div>
+    <ul><li>Brinstar<li>Crateria<li>Maridia<li>Wrecked Ship<li>Norfair<li>Tourian</ul></div>
   </div>
   </div>
 
